--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">mude as palavras usadas
+                        O ChatGPT disse:
+                        A Tropicália, ou Tropicalismo, foi um movimento cultural brasileiro que surgiu na década de 1960, alcançando seu auge entre 1967 e 1968. Esse movimento se destacou pela fusão de elementos da cultura brasileira tradicional com influências internacionais, como o rock e a música pop. Além da música, impactou o cinema, o teatro e as artes visuais, sendo representado por artistas como Caetano Veloso, Gilberto Gil, Gal Costa e Os Mutantes. A Tropicália foi uma forma de renovação da identidade brasileira e uma maneira de resistência durante o regime militar.</p>
                 </div>
             </div>
         </section>
