--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
                 </div>
                 <div class="col-5">
                     <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">A Tropicália foi um movimento cultural brasileiro dos anos 1960 que misturou a cultura tradicional do Brasil com influências internacionais, como o rock e a música pop. Com impacto na música, cinema, teatro e artes, teve nomes como Caetano Veloso, Gilberto Gil e Gal Costa. Foi uma forma de renovar a identidade brasileira e de resistência durante a ditadura militar.</p>
                 </div>
             </div>
         </section>
