--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
         <section id="inicio" class="my-5">
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
+                    <h1 class="display-4 text-white fst-italic fw-bold">Bienvenido a</h1>
                     <img src="img/logo-2.png" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#tropicalia"
-                        class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a>
+                        class="btn btn-primary btn-lg botao-inicio fw-semibold">quiero conocer!</a>
                 </div>
                 <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
@@ -57,8 +56,8 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália foi um movimento cultural brasileiro dos anos 1960 que misturou a cultura tradicional do Brasil com influências internacionais, como o rock e a música pop. Com impacto na música, cinema, teatro e artes, teve nomes como Caetano Veloso, Gilberto Gil e Gal Costa. Foi uma forma de renovar a identidade brasileira e de resistência durante a ditadura militar.</p>
+                    <h2>cual fue el Tropicália?</h2>
+                    <p class="p-2">Tropicália fue un movimiento cultural brasileño de la década de 1960 que mezcló la cultura tradicional brasileña con influencias internacionales, como el rock y la música pop. Con impacto en la música, el cine, el teatro y las artes, tuvo nombres como Caetano Veloso, Gilberto Gil y Gal Costa. Fue una forma de renovar la identidad y la resistencia brasileña durante la dictadura militar.</p>
                 </div>
             </div>
         </section>
@@ -92,7 +91,7 @@
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato</h2>
+                    <h2 class="mb-3">ponte en contacto</h2>
                     <form>
                         <div class="form-group mb-3">
                             <label for="nome">Nome</label>
@@ -105,13 +104,12 @@
                                 placeholder="Digite seu email">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="mensagem">Mensagem</label>
+                            <label for="mensagem">mensaje</label>
                             <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
                                 placeholder="Escreva sua mensagem"></textarea>
                         </div>
                         <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Enviar
-                                mensagem</button>
+                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">enviar mensaje</button>
                         </div>
                     </form>
                 </div>
@@ -123,7 +121,7 @@
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Eu q fiz e traduzi GG fac</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
