--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="container d-flex justify-content-between align-items-center" >
             <img src="img/logo.png" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
-                <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
+                <li class="nav-item"><a class="nav-link" href="#inicio">comenzar</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contato">contacto</a></li>
             </ul>
             <div id="acessibilidade" class="menu-acessibilidade"> 
                 <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao" aria-expanded="false">acessibilidade</button>
@@ -96,17 +96,17 @@
                         <div class="form-group mb-3">
                             <label for="nome">Nome</label>
                             <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu nome completo">
+                                placeholder="ingresa tu nombre completo">
                         </div>
                         <div class="form-group mb-3">
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu email">
+                                placeholder="ingresa tu correo electrónico">
                         </div>
                         <div class="form-group mb-3">
                             <label for="mensagem">mensaje</label>
                             <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
-                                placeholder="Escreva sua mensagem"></textarea>
+                                placeholder="escribe tu mensaje"></textarea>
                         </div>
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-primary btn-lg rounded-pill">enviar mensaje</button>
