--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <i class="bi bi-tiktok"></i>
         <p class="mt-3">By:Teteu, Oliviapalito</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
   
 </body>
